Assets/css/cost-control.css
/* KANBOARD PLUGIN - CSS FILE */

:root {
    --pp-blue: #007AC9;
    --pp-blue-alt: #00ADFF;
    --pp-red: #B71234;
    --pp-red-alt: #DA004C;
    --pp-red-alt-2: #AE003D;
    --pp-black: #000000;
    --pp-light-grey: #8F8F8F;
    --pp-grey: #4D4D4D;
    --pp-white: #FFFFFF;
    --pp-green: #2EA02E;
    --pp-green-dark: #055D20;
    --pp-orange: #FF6500;
    --pp-brown: #800000;
    --blue-icon-dark: #034CA6;
    --button-blue-gradient: linear-gradient(to bottom, #7892c2 80%, #476e9e 100%);
    --blue-border-gradient-match: #476E9E;
    --button-background-delete: #D05C84;
    --link-color-primary: #36C;
    --header-page-margin-cost-control: 5px 15px 10px 15px;
    --page-margin-cost-control: 0px 15px 0px 15px;
    --title-margin-cost-control: 0px 15px 0px 15px;
    --border-radius-cost-control: 3px;
    --panel-background-cost-control: #EEEEEE;
    --transition-cost-control: ease-in-out all .3s;
}

.pp-blue { color: var(--pp-blue); fill: var(--pp-blue); }
.pp-blue-alt { color: var(--pp-blue-alt); fill: var(--pp-blue-alt); }
.pp-red { color: var(--pp-red); fill: var(--pp-red); }
.pp-red-alt { color: var(--pp-red-alt); fill: var(--pp-red-alt); }
.pp-red-alt-2 { color: var(--pp-red-alt-2); fill: var(--pp-red-alt-2); }
.pp-black { color: var(--pp-black); fill: var(--pp-black); }
.pp-light-grey { color: var(--pp-light-grey); fill: var(--pp-light-grey); }
.pp-grey { color: var(--pp-grey); fill: var(--pp-grey); }
.pp-white { color: var(--pp-white); fill: var(--pp-white); }
.pp-green { color: var(--pp-green); fill: var(--pp-green); }
.pp-dark-green { color: var(--pp-green-dark); fill: var(--pp-green-dark); }
.pp-orange { color: var(--pp-orange); fill: var(--pp-orange); }

/*a, details, summary, i, img, table, tr, svg, figure, button {
    transition: var(--transition-ksp);
}*/

/*a:hover { color: var(--pp-red-alt-2) !important; }*/

/* IF USING SVGs INSIDE ANCHOR LINKS */
/*svg { pointer-events: none }*/

.display-none, .d-none { display: none !important; }

.font-weight-bold { font-weight: bold; }

.text-center { text-align: center; }

.relative { position: relative; }

#RateReminder {
    top: 0;
    bottom: initial;
    right: 0;
    position: absolute;
    left: unset;
    animation: fadeout 5s linear forwards;
    animation-delay: 3s;
    width: auto;
    border: 2px solid;
    font-style: italic;
    padding: 5px 15px;
}

#PluginTop {
    display: block;
    right: 0;
    position: relative;
    float: right;
    margin-top: 3px;
    color: var(--pp-grey);
}

#PluginBottom {
    display: block;
    right: 0;
    position: relative;
    float: right;
    margin-bottom: 4px;
    color: var(--pp-grey);
    margin-top: 3px;
    margin-left: 5px;
}

.currency-filter {
    display: block;
    margin: 10px auto 25px auto;
    text-align: center;
}

.currency-filter label {
    display: inline;
    position: absolute;
    margin-top: 4px;
    margin-left: 4px;
}

.currency-filter label svg {
    vertical-align: text-bottom;
    margin-right: 5px;
    pointer-events: none;
}

.currency-filter input {
    padding: 3px 3px 4px 3px;
    font-size: 1em;
    border: 2px solid var(--pp-brown);
    width: 375px;
    text-align: center;
    box-shadow: 1px 1px 7px 0px #000;
}

.cost-control-btn .currency-wallet-icon {
    width: 1em;
    height: 1em;
    vertical-align: bottom;
    margin-bottom: 3px;
}

.cost-control-page-header {
    margin: var(--page-margin-cost-control);
}

.cost-control-page-header h2 {
    margin-top: 5px;
    font-weight: 600;
}

.cost-control-page-header h2 span {
    vertical-align: bottom;
}

ul.currency-actions {
    list-style-type: none;
}

ul.currency-actions li {
    display: inline-block;
    margin-right: 15px;
}

fieldset.app-currencies {
    width: fit-content;
    margin: 25px auto 15px auto;
    padding: 10px 25px 15px 25px;
    border-color: var(--pp-brown);
    border-radius: var(--border-radius-cost-control);
}

.app-currencies-wrapper {
    margin: auto;
    text-align: center;
}

fieldset.app-currencies legend {
    font-weight: 600;
    padding: 0 10px;
}

.top-detail-bar .json-last-checked {
    float: left;
    /*margin-bottom: 4px;*/
    margin-top: 9px;
    padding: 2px 4px 1px 0;
    font-weight: 400;
    color: var(--pp-grey);
    font-style: italic;
}

#CurrenciesTable {
    margin: 5px auto;
}

.base-currency-wrapper, .reference-currency-wrapper {
    min-width: 150px;
    display: inline-block;
    height: 85px;
    vertical-align: middle;
    padding: 2px 5px;
}

.base-currency-title, .base-currency-code, .base-currency-value, .reference-currency-title, .reference-currency-code {
    display: block;
    text-align: center;
}

.reference-currency-manual-rate, .reference-currency-live-rate {}

.base-currency-title, .reference-currency-title {
    text-transform: uppercase;
    font-size: .8em;
    font-weight: 600;
    color: var(--pp-grey);
}

.app-currency-list {}

.base-currency-wrapper {
    margin-right: 10px;
    border: 1px solid var(--pp-brown);
    border-radius: var(--border-radius-cost-control);
}

.base-currency-title {}

.base-currency-code, .reference-currency-code {
    font-size: 1.5em;
    font-weight: 700;
}

.base-currency-value {
    font-size: 1.3em;
    margin-top: 5px;
}

.reference-currency-wrapper {
    margin-left: 10px;
    border: 1px solid var(--pp-brown);
    border-radius: var(--border-radius-cost-control);
}

.manual-live-wrapper {
    display: block;
    text-align: center;
}

.reference-currency-title {}
.reference-currency-code {}

.reference-currency-manual-rate {
    font-size: 1.3em;
    color: var(--pp-grey);
}

.reference-currency-live-rate {
    font-size: 1.3em;
    font-weight: 600;
    height: 30px;
    display: inline-block;
}

.reference-currency-live-rate .live-rate-icon {
    width: 28px;
    height: 28px;
    display: inline-block;
    vertical-align: text-top;
}

.add-reference-currency .reference-currency-icon {
    display: block;
    margin: 10px auto 0 auto;
    width: 40px;
}

.add-reference-currency .add-reference-currency-link {
    text-align: center;
    display: block;
    font-size: .9em;
    margin-top: 2px;
}

.edit-comment-btn {
    float: right;
}

.edit-comment-empty {
    visibility: hidden;
}

tr.rate-results td a{
    transition: var(--transition-cost-control);
}

tr.rate-results:hover .edit-comment-empty {
    visibility: visible;
}

.api-detail, .last-update-detail, .next-update-detail {
    display: block;
    font-size: .9em;
}

.live-rate .live-rate-icon {
    width: 20px;
    height: 20px;
    display: inline-block;
    vertical-align: bottom;
    opacity: .6;
}

.base-currency-value .base-rate-home-icon {
    width: 24px;
    height: 24px;
    vertical-align: sub;
}

.spacer {
    width: 25px;
    display: inline-block;
}

